--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,32 +2,44 @@ name: Deployment
 on:
   push:
     branches:
-      - main
-      - dev
+    - main
+    - dev
+env:
+  MONGODB_DB_NAME: ${{ secrets.DB_NAME }}
 jobs:
   test:
+    env:
+      MONGODB_CLUSTER_ADDRESS: something
+      MONGODB_USERNAME: username
+      MONGODB_PASSWORD: ${{ secrets.PASSWORD }}
     environment: testing
     runs-on: ubuntu-latest
     steps:
-      - name: Get Code
-        uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: npm-deps-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm ci
-      - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:XYZ
-      - name: Run tests
-        run: npm test
-      - name: Output information
-        run: echo "..."
+    - name: Get Code
+      uses: actions/checkout@v3
+    - name: echo password
+      run: echo $MONGODB_PASSWORD
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: npm-deps-${{ hashFiles('**/package-lock.json') }}
+    - name: Install dependencies
+      run: npm ci
+    - name: Run server
+      run: npm start & npx wait-on http://127.0.0.1:XYZ
+    - name: Run tests
+      run: npm test
+    - name: Output information
+      run: echo "..."
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Output information
-        run: |        
-          echo "..."
+    - name: echo password
+      run: echo $MONGODB_PASSWORD
+    - name: echo db name
+      run: echo $MONGODB_DB_NAME
+    - name: Output information
+      run: |
+        echo "..."
