--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ env:
   MONGODB_DB_NAME: ${{ secrets.DB_NAME }}
 jobs:
   test:
+  environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: something
       MONGODB_USERNAME: username
@@ -26,10 +27,10 @@ jobs:
         key: npm-deps-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
       run: npm ci
-    - name: Run server
-      run: npm start & npx wait-on http://127.0.0.1:XYZ
-    - name: Run tests
-      run: npm test
+    # - name: Run server
+    #   run: npm start & npx wait-on http://127.0.0.1:XYZ
+    # - name: Run tests
+    #   run: npm test
     - name: Output information
       run: echo "..."
   deploy:
